style.css
/* Modern CSS Reset by Josh Como https://www.joshwcomeau.com/css/custom-css-reset/ */

/*
  1. Use a more-intuitive box-sizing model.
*/
*,
*::before,
*::after {
  box-sizing: border-box;
}
/*
    2. Remove default margin
  */
* {
  margin: 0;
}
/*
    Typographic tweaks!
    3. Add accessible line-height
    4. Improve text rendering
  */
body {
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
}
/*
    5. Improve media defaults
  */
img,
picture,
video,
canvas,
svg {
  display: block;
  max-width: 100%;
}
/*
    6. Remove built-in form typography styles
  */
input,
button,
textarea,
select {
  font: inherit;
}
/*
    7. Avoid text overflows
  */
p,
h1,
h2,
h3,
h4,
h5,
h6 {
  overflow-wrap: break-word;
}

/* CSS Variables */

:root {
  --almost-white: hsl(0, 0%, 98%);
  --medium-gray: hsl(0, 0%, 41%);
  --almost-black: hsl(0, 0%, 8%);
  --white: hsl(0, 0%, 100%);
}

body {
  font-family: "Epilogue", sans-serif;
  font-optical-sizing: auto;
  font-style: normal;
}

body p {
  font-size: 1.125rem;
}

.overlay {
  display: none;
  position: fixed;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.7);
  z-index: 2;
}

.overlay.active {
  display: block;
}

/* Header and Navigation Styles */

header,
nav,
.menu-left,
.menu-right {
  display: flex;
  align-items: center;
}

header {
  align-items: center;
  padding: 1rem 2.5rem;
}

nav {
  justify-content: space-between;
  flex: 1;
  margin-bottom: 5px;
}

.nav-item {
  position: relative;
  cursor: pointer;
  padding: 15px 0;
}

ul {
  margin: 0;
}

ul > li {
  list-style: none;
  color: var(--medium-gray);
  font-size: 0.9rem;
  font-weight: 500;
  transition: 0.7s ease-in-out;
}

ul > li:hover,
a:hover,
.features-menu li a:hover {
  color: var(--almost-black);
}

a {
  text-decoration: none;
  color: var(--medium-gray);
}

.dropdown-label {
  display: flex;
  align-items: center;
  gap: 7px;
}

.menu-left {
  gap: 30px;
}

.menu-right {
  gap: 50px;
}

.menu-left {
  margin-left: 2rem;
}

.register {
  border: var(--medium-gray) 1.5px solid;
  border-radius: 15px;
  padding: 10px 20px;
  transition: 0.7s ease-in-out;
}

.register:hover {
  border-color: var(--almost-black);
  color: var(--almost-black);
}

/* Dropdown Menus */

.dropdown-menu {
  position: absolute;
  top: 100%;
  background-color: var(--white);
  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
  border-radius: 10px;
  padding: 20px 15px;
  visibility: hidden;
  opacity: 0;
  transition: opacity 0.3s ease, visibility 0.3s ease;
}

.features-menu {
  left: -75px;
}

.dropdown-nav-item:hover .features-menu,
.dropdown-nav-item:hover .company-menu {
  visibility: visible;
  opacity: 1;
  transition-delay: 0.1s;
}

.dropdown-arrow {
  transition: 0.3s ease-in-out;
}

.dropdown-nav-item:hover .dropdown-arrow {
  transform: rotate(180deg);
}

.features-menu li,
.company-menu li {
  display: flex;
  align-items: center;
  padding: 5px 10px;
  white-space: nowrap;
  transition: 0.3s ease ease-in-out;
}

.features-menu li a {
  display: flex;
  align-items: center;
  gap: 10px;
  color: var(--medium-gray);
  font-size: 0.9rem;
  font-weight: 500;
  text-decoration: none;
  width: 100%;
  cursor: pointer;
}

.features-menu li a:hover,
.company-menu li a:hover {
  color: var(--almost-black);
}

.icon {
  display: inline-block;
  flex-shrink: 0;
  width: 15px;
  height: auto;
  margin-right: 5px;
}

.icon img {
  width: 100%;
  height: 100%;
  object-fit: contain;
}

.menu-open,
.menu-close {
  display: none;
}

/* Hero Section Styles */

.hero {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 40px 20px;
}

.hero-content {
  display: flex;
  justify-content: space-between;
  align-items: stretch;
  gap: 75px;
  max-width: 1100px;
}

.hero-left {
  display: flex;
  flex-direction: column;
  justify-content: end;
}

h1,
p {
  margin-bottom: 3rem;
}

h1 {
  font-size: 4.75rem;
  line-height: 1;
  max-width: 95%;
}

p {
  color: var(--medium-gray);
  font-weight: 500;
  max-width: 80%;
}

.hero-btn {
  font-weight: 700;
  font-size: 1.1rem;
  background-color: black;
  padding: 15px 30px;
  border-radius: 15px;
  color: white;
  max-width: fit-content;
  transition: 0.7s ease-in-out;
  border: black solid 1.5px;
}

.hero-btn:hover {
  color: black;
  background-color: transparent;
}

.clients-container {
  display: flex;
  align-items: center;
  gap: 40px;
  margin-top: 100px;
}

/* Attibution Styles */

.attribution {
  display: flex;
  justify-content: center;
  align-items: center;
  padding-bottom: 1rem;
  padding-top: 3rem;
}

.attribution span {
  font-size: 0.8rem;
}

/* Mobile devices (tablets/smartphone) */
@media (max-width: 1024px) {
  /* Header/Navigation */
  header {
    position: relative;
    justify-content: space-between;
    padding: 1rem;
  }
  nav {
    position: fixed;
    flex-direction: column;
    align-items: start;
    justify-content: start;
    background-color: white;
    min-height: 100%;
    min-width: 66%;
    top: 0;
    right: 0;
    transition: 0.5s ease-in-out;
    transform: translateX(100%);
    z-index: 10;
  }

  nav.active {
    transform: translateX(0);
  }

  .dropdown-menu {
    z-index: 100;
    position: relative;
    box-shadow: none;
    visibility: visible;
    opacity: 1;
  }

  .hidden {
    display: none;
  }

  .dropdown-menu.active {
    display: block;
  }

  .dropdown-arrow.active {
    transform: rotate(180deg);
  }

  .features-menu {
    left: 0;
  }

  .dropdown-nav-item {
    flex-direction: column;
  }

  .menu-left {
    flex-direction: column;
    margin: 0;
    padding: 0;
    gap: 0;
    align-items: start;
    min-width: 100%;
    margin-top: 60px;
    padding-left: 1.5rem;
  }

  .menu-right {
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding: 0;
    gap: 0;
    min-width: 100%;
    margin-bottom: 60px;
  }

  .register {
    padding: 10px 70px;
  }

  .menu-close {
    display: block;
    position: absolute;
    right: 15px;
    top: 15px;
    z-index: 100;
  }

  .menu-open {
    display: block;
  }

  /* Hero Section */

  .hero {
    padding: 0rem;
    margin-top: 1rem;
  }

  .hero-content {
    flex-direction: column-reverse;
    align-items: center;
    gap: 50px;
  }

  .hero-right {
    margin-bottom: 1rem;
    width: 100%;
  }

  .hero-right img {
    width: 100%;
  }

  .hero-left {
    justify-content: center;
    align-items: center;
  }

  h1,
  p {
    margin-bottom: 1.5rem;
  }

  h1 {
    font-size: 2.25rem;
    text-align: center;
    line-height: 1;
    max-width: 100%;
  }

  p {
    max-width: 100%;
    text-align: center;
    margin-left: 1rem;
    margin-right: 1rem;
  }

  .clients-container {
    align-items: center;
    justify-content: center;
    gap: 25px;
    margin-top: 50px;
  }

  .databiz-logo,
  .meet-logo,
  .maker-logo {
    max-width: 75px;
    height: auto;
    display: block;
  }

  .audiophile-logo {
    max-width: 55px;
    height: auto;
    display: block;
  }
}

